--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,8 +108,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -282,8 +282,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -402,8 +402,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -522,8 +522,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -619,8 +619,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -693,8 +693,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -808,8 +808,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -916,8 +916,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -990,8 +990,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -1098,8 +1098,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -1160,8 +1160,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -1268,8 +1268,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -1442,8 +1442,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -1536,8 +1536,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
