Repeat ScrubTest compression 5000 times DO NOT MERGE

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,8 +108,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -282,8 +282,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -402,8 +402,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -522,8 +522,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -619,8 +619,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -693,8 +693,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -808,8 +808,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -870,8 +870,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -978,8 +978,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -1052,8 +1052,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -1160,8 +1160,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -1222,8 +1222,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -1330,8 +1330,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -1504,8 +1504,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
@@ -1598,8 +1598,8 @@ jobs:
     - DTEST_BRANCH: trunk
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
-    - REPEATED_UTEST_TARGET: testsome
-    - REPEATED_UTEST_CLASS: org.apache.cassandra.db.ScrubTest
+    - REPEATED_UTEST_TARGET: test-compression
+    - REPEATED_UTEST_CLASS: ScrubTest
     - REPEATED_UTEST_METHODS: null
     - REPEATED_UTEST_COUNT: 5000
     - REPEATED_UTEST_STOP_ON_FAILURE: false
