Tidy up naming; convert to caffeine cache; remove auto-refresh on mutation of state
Given there's a straddle we can get stuck in w/data in CQL vs. in memory if we
miss a CQL-based mutation (a node is down, the change to denylist is delivered
via hint or repair later, etc), we can't rely on updating the in-memory
representation at the same time as the JMX addition as being a reliable way to
ensure things are synced. The flow of usage (which we'll document in the doc
changes at end of patch) will definitely be 1) mutate state via JMX or CQL, 2)
reload cache across cluster w/each node w/JMX call (eventually supporting
nodetool as wel).

There's still an outstanding issue where, if you do a loadall call inside the
denylist, the per-table setting isn't respected as we try to load all and warn
on *that* being over; should be relatively simple to fix.

--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -1041,7 +1041,7 @@ slow_query_log_timeout_in_ms: 500
 # denylist_initial_load_retry_seconds = 5;
 
 # We cap the number of denylisted keys allowed per table to keep things from growing unbounded. Nodes will warn above
-# this limit while allowing new denylisted keys to be inserted. Denied keys are loaded in natural query / clustering9
+# this limit while allowing new denylisted keys to be inserted. Denied keys are loaded in natural query / clustering
 # ordering by partition key in case of overflow.
 # max_denylist_keys_per_table = 1000;
 
